--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
